avance de cambios hasta graficas de poblacion

--- a/src/base2.njk
+++ b/src/base2.njk
@@ -27,7 +27,7 @@
 
 </head>
 
-<body class="stretched search-overlay">
+<body class="stretched search-overlay" style="height: 100%">
 	<!-- Preloader Start -->
 	<div id="preloader-active">
 		<div class="preloader d-flex align-items-center justify-content-center">
@@ -40,7 +40,7 @@
 	</div>
 	<!-- Document Wrapper
 	============================================= -->
-	<div id="wrapper" class="clearfix">
+	<div id="wrapper" class="clearfix" style="height: 100%">
 
 		<!-- Header
 		============================================= -->
