--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -2866,14 +2866,26 @@ hr{
   color: #1d1d1b;
   font-weight: bold;
   width: 100%;
+  display: flex;
 }
 
-.sidebar ul li .active{
+.sidebar ul li a img{
+  width: 20px;
+  height: 20px;
+  margin-right: 15px;
+}
+
+.sidebar ul li a.active {
   color: #fff;
   background-color: #1d1d1b;
   padding: 5px;
   border-radius: 1px;
 }
+
+.sidebar ul li a.active img {
+  filter: brightness(0) invert(1);
+}
+
 
 .tab-content {
   display: none;
@@ -2921,27 +2933,32 @@ hr{
 
 .header-buttons{
   background-color: #1d1d1b;
-  border: 1px solid #fff;
+  border: 1px solid #1d1d1b;
   color: #fff;
-  border-radius: 1px;
   padding: 5px 10px;
   margin: 0 5px;
-  width: 100%;
-  transition: 0.5s all ease;
+  width: fit-content;
+  display: flex;
+  align-items: center;
 }
 
 .header-buttons:hover{
   opacity: 0.8;
+  border: 1px solid #fff;
+  border-radius: 1px;
 }
 
-.header-buttons i{
+.header-buttons img{
   margin-right: 5px;
+  width: 18px;
+  height: 18px;
 }
 
 .box_shadow_section{
   border-radius: 10px;
   border: 1px solid #ccc;
   box-shadow: 5px 5px 5px #ccc;
+  background-color: #fff;
 }
 
 .box_shadow_section_2{
@@ -2976,4 +2993,147 @@ hr{
   .semicircle-menu {
     display: block;
   }
+}
+
+@font-face {
+  font-family: "Sora-Bold";
+
+  src: url("/assets/fonts/tipografia/titular/Sora-Bold.ttf");
+}
+
+@font-face {
+  font-family: "Sora-Medium";
+
+  src: url("/assets/fonts/tipografia/titular/Sora-Medium.ttf");
+}
+
+@font-face {
+  font-family: "Sora-Light";
+
+  src: url("/assets/fonts/tipografia/titular/Sora-Light.ttf");
+}
+
+@font-face {
+  font-family: "Euclid-Bold";
+
+  src: url("/assets/fonts/tipografia/texto/EuclidCircularA-Bold.ttf");
+}
+
+@font-face {
+  font-family: "Euclid-Medium";
+
+  src: url("/assets/fonts/tipografia/texto/EuclidCircularA-Medium.ttf");
+}
+
+@font-face {
+  font-family: "Euclid-Semibold";
+
+  src: url("/assets/fonts/tipografia/texto/EuclidCircularA-SemiBold.ttf");
+}
+
+h1, h2, h3, h4, h5, h6{
+  font-family: 'Sora-Bold', sans-serif!important;
+}
+
+a, p, span{
+  font-family: 'Euclid-Medium', sans-serif!important;
+}
+
+.section_text{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5%;
+  margin: 0px 6px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  box-shadow: 5px 5px 5px #ccc;
+  background-color: #fff;
+  height: 100%;
+}
+
+.section_text img{
+  width: 100px;
+  margin-right: 15px;
+  align-self: flex-start;
+}
+
+.section_text .text h4{
+  font-family: 'Sora-Light', sans-serif!important;
+  font-size: 15px;
+}
+
+.section_text .text h1{
+  font-size: 35px;
+}
+
+.section_text .text p{
+  font-size: 13px;
+}
+
+
+.section_text_2{
+  display: block;
+  align-items: center;
+  justify-content: center;
+  padding: 5%;
+  margin: 0px 6px;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  box-shadow: 5px 5px 5px #ccc;
+  background-color: #fff;
+  height: 100%;
+}
+
+.section_text_2 .text h4{
+  font-family: 'Sora-Light', sans-serif!important;
+  font-size: 15px;
+}
+
+.section_text_2 .text h1{
+  font-size: 35px;
+}
+
+.section_text_2 .text p{
+  font-size: 13px;
+}
+
+.section_text_2_5{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5%;
+  margin: 0px 6px 0 0;
+  border-radius: 10px;
+  border: 1px solid #ccc;
+  box-shadow: 5px 5px 5px #ccc;
+  background-color: #fff;
+  height: 50%;
+}
+
+.section_text_2_5:first-child{
+  margin-bottom: 5px;
+}
+
+.section_text_2_5 img{
+  width: 100px;
+  margin-right: 15px;
+  align-self: flex-start;
+}
+
+.section_text_2_5 .text h3{
+  font-family: 'Sora-Light', sans-serif!important;
+  font-size: 15px;
+}
+
+.section_text_2_5 .text h1{
+  font-size: 35px;
+}
+
+.section_text_2_5 .text p{
+  font-size: 13px;
+}
+
+.select-municipios{
+  padding: 8px;
 }
