--- a/src/base.njk
+++ b/src/base.njk
@@ -73,6 +73,14 @@
 								<li class="menu-item "><a class="menu-link" href="/municipios/index.html"><div>Municipios</div></a></li>
 								<li class="menu-item "><a class="menu-link" href="/mapa/index.html"><div>Mapa Municipal</div></a></li>
 								<li class="menu-item "><a class="menu-link btn" style="padding: 5px 10px!important;" href="/contacto/index.html"><div>Contacto</div></a></li>
+
+								<div class="redes-responsive">
+									<a target="_blank" href="https://www.facebook.com/Redciudadanagt"><i class="fab fa-facebook-f"></i></a>
+									<a target="_blank" href="https://www.tiktok.com/@redxguate"><i class="fa-brands fa-tiktok"></i></a>
+									<a target="_blank" href="https://twitter.com/redxguate"><i class="fa-brands fa-x-twitter"></i></a>
+									<a target="_blank" href="https://www.instagram.com/redxguate/"><i class="fab fa-instagram "></i></a>
+									<a target="_blank" href="https://www.youtube.com/c/RedciudadanaOrgGt"><i class="fab fa-youtube"></i></a>
+								</div>
 							</ul>
 
 						</nav><!-- #primary-menu end -->
