--- a/src/base2.njk
+++ b/src/base2.njk
@@ -27,7 +27,7 @@
 
 </head>
 
-<body class="stretched search-overlay" style="height: 100%">
+<body class="stretched search-overlay" style="min-height: 100vh; height: auto;">
 	<!-- Preloader Start -->
 	<div id="preloader-active">
 		<div class="preloader d-flex align-items-center justify-content-center">
@@ -40,7 +40,7 @@
 	</div>
 	<!-- Document Wrapper
 	============================================= -->
-	<div id="wrapper" class="clearfix" style="height: 100%">
+	<div id="wrapper" class="clearfix" style="min-height: 100vh; height: auto;">
 
 		<!-- Header
 		============================================= -->
