--- a/src/municipio.njk
+++ b/src/municipio.njk
@@ -95,7 +95,7 @@ tags:
         </div>
     </div>
 
-    <div class="px-5" style="background-color: #edf0f6; height: 100%;">
+    <div class="px-5" style="background-color: #edf0f6; min-height: 100vh; height: auto;">
         <div class="row w-100">
             <div class="col-lg-12">
                 <div class="row align-items-center justify-content-between box_shadow_section_2" >
