--- a/src/municipio.njk
+++ b/src/municipio.njk
@@ -179,14 +179,14 @@ tags:
                                 <div class="col-lg-12">
                                     <div class="row ">
                                         <div class="col-lg-4">
-                                            <div id="map" style="width: 100%; height: 350px;"></div>
+                                            <div id="map" style="width: 100%; height: 300px;"></div>
                                         </div>
                                         <div class="col-lg-8 align-items-center d-flex">
                                             <div>
-                                                <h3 class="mb-2">
+                                                <h3 class="mb-2 px-4">
                                                     {{municipio.departamento}} - {{municipio.municipio}}
                                                 </h3>
-                                                <p>
+                                                <p class="px-4">
                                                     {{municipio.resumen.Resumen}}
                                                 </p>
                                             </div>
@@ -390,7 +390,7 @@ tags:
                                     <div class="col-lg-8 mb-4">
                                         <div class="section_text_2">
                                             <!-- Añadir un canvas para la gráfica -->
-                                            <canvas id="pobrezaChart"></canvas>
+                                            <canvas id="pobrezaChart" ></canvas>
                                         </div>                                          
                                     </div>
                                 </div>
@@ -543,6 +543,36 @@ tags:
 
                     <section id="economia" class="tab-content">
                         <div class="row">
+                            
+                            <div class="col-lg-4 mb-4">
+                                <div class="section_text_2">
+                                    <h5 class="text-center">Uso de celular</h5>
+                                    <!-- Añadir un canvas para la gráfica -->
+                                    <canvas id="poblacionUsoCelularChart"></canvas>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 mb-4">
+                                <div class="section_text_2">
+                                    <h5 class="text-center">Uso de computadora</h5>
+                                    <!-- Añadir un canvas para la gráfica -->
+                                    <canvas id="poblacionUsoComputadoraChart"></canvas>
+                                </div>
+                            </div>
+                            <div class="col-lg-4 mb-4">
+                                <div class="section_text_2">
+                                    <h5 class="text-center">Uso de internet</h5>
+                                    <!-- Añadir un canvas para la gráfica -->
+                                    <canvas id="poblacionUsoInternetChart"></canvas>
+                                </div>
+                            </div>
+                            <div class="col-lg-12 mb-4">
+                                <div class="section_text_2">
+                                    <h5 class="text-center">Uso de celular, computadora y/o internet</h5>
+                                    <!-- Añadir un canvas para la gráfica -->
+                                    <canvas id="poblacionUsoTodoChart"></canvas>
+                                </div>
+                            </div>
+
                         </div>
                     </section>
 
@@ -979,6 +1009,24 @@ tags:
       "termino": {{ municipio.poblacion_no_asiste.termino or 0 }},
       "otra": {{ municipio.poblacion_no_asiste.otra or 0 }},
       "nodeclarada": {{ municipio.poblacion_no_asiste.nodeclarada or 0 }}
+	}
+</script>
+
+<script id="poblacion-electronicos" type="application/json">
+	{
+	  "celular": {{ municipio.poblacion_electronicos.celular or 0 }},
+      "nocelular": {{ municipio.poblacion_electronicos.nocelular or 0 }},
+      "nacelular": {{ municipio.poblacion_electronicos.nacelular or 0 }},
+      "computadora": {{ municipio.poblacion_electronicos.computadora or 0 }},
+      "nocomputadora": {{ municipio.poblacion_electronicos.nocomputadora or 0 }},
+      "nacomputadora": {{ municipio.poblacion_electronicos.nacomputadora or 0 }},
+      "internet": {{ municipio.poblacion_electronicos.internet or 0 }},
+      "nointernet": {{ municipio.poblacion_electronicos.nointernet or 0 }},
+      "nainternet": {{ municipio.poblacion_electronicos.nainternet or 0 }},
+      "usatodo": {{ municipio.poblacion_electronicos.usatodo or 0 }},
+      "usaceyco": {{ municipio.poblacion_electronicos.usaceyco or 0 }},
+      "usaceei": {{ municipio.poblacion_electronicos.usaceei or 0 }},
+      "usacoei": {{ municipio.poblacion_electronicos.usacoei or 0 }}
 	}
 </script>
 
